--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <!-- ANIMATION CONTAINER -->
                     <div class="animation-container animation-fade-up" data-animation-delay="900"> 
                        
-                        <div class="open-popup">Notify Me</div>
+                        <div class="open-popup"><a href="/registration.html">Register Candidates</a></div>
                         
                     </div>
                     <!-- /ANIMATION CONTAINER -->
