--- a/registration.html
+++ b/registration.html
@@ -198,7 +198,7 @@
       pass: null,
 
       saving: false,
-      cats: ["BIDAYA", "UOOLA", "THANIYA", "THANAVIYYA", "ALIYA"],
+      cats: ["BIDAYA", "UOOLA", "THANIYA", "THANAWIYYA"],
       prg: null,
       std: null,
       activecat: null,
