--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
    
    
     <head>
-
-
         <!-- META -->
         <meta charset="utf-8">
         <meta name="robots" content="noodp">
@@ -107,7 +105,7 @@
                     <!-- ANIMATION CONTAINER -->
                     <div class="animation-container animation-fade-up" data-animation-delay="1200">
                        
-                        <p>© Branwith.</p>
+                        <p>© Branzle.</p>
                         
                     </div>
                     <!-- /ANIMATION CONTAINER -->
