--- a/index.html
+++ b/index.html
@@ -27,7 +27,27 @@
 
 
     <body>
-    
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Article</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Result</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Registration</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
        
 
         <!-- JAVASCRIPTS -->
