--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
         </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Link
+              Downloads
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Stage schedule</a></li>
+              <li><a class="dropdown-item" href="#">Non stage schedule</a></li>
+              <li><a class="dropdown-item" href="#">Program list</a></li>
+              <li><a class="dropdown-item" href="#">Category wise program list</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" href="#">All in one schedule</a></li>
             </ul>
           </li>
       </ul>
