--- a/downloads.html
+++ b/downloads.html
@@ -44,6 +44,12 @@
 					<span class="text">Results</span>
 				</a>
 			</li>
+			<li>
+				<a href="/registration.html">
+					<i class='bx bxs-edit'></i>
+					<span class="text">Registration</span>
+				</a>
+			</li>
 		</ul>
 	</section>
 	<!-- SIDEBAR -->
