--- a/results.html
+++ b/results.html
@@ -34,7 +34,7 @@
 			</li>
 			<li>
 				<a href="/downloads.html">
-					<i class='bx bxs-download'></i>
+					<i class='bx bx-cloud-download' ></i>
 					<span class="text">Downloads</span>
 				</a>
 			</li>
@@ -42,6 +42,12 @@
 				<a href="/results.html">
 					<i class='bx bxs-doughnut-chart' ></i>
 					<span class="text">Results</span>
+				</a>
+			</li>
+			<li>
+				<a href="/registration.html">
+					<i class='bx bxs-edit'></i>
+					<span class="text">Registration</span>
 				</a>
 			</li>
 		</ul>
