--- a/results.html
+++ b/results.html
@@ -14,7 +14,7 @@
 
 
 	<!-- SIDEBAR -->
-	<section id="sidebar">
+	<section id="sidebar"class="hide">
 		<a href="#" class="brand">
 			<i class='bx bxs-doughnut-chart'></i>
 			<span class="text">Article</span>
